--- a/8.4 Web Design Agency Project/style.css
+++ b/8.4 Web Design Agency Project/style.css
@@ -1,4 +1,4 @@
-@media (min-width: 600px) {
+@media (min-width: 601px) {
   body {
     font-family: "Poppins", sans-serif;
     margin: 50px 50px 0 50px;
@@ -18,19 +18,20 @@
     color: midnightblue;
   }
   .left-card{
+    float: left;
     display: inline-block;
     width: 45%;
     margin-right: 2rem;
   }
   .right-card{
+    float: right;
     display: inline-block;
-    /* 靠右对齐 */  
     width: 45%;
   }
   .tile-image{
-    width: 10rem;
+    width: 50%;
     height: 7rem;
-
+    object-fit: cover;
     float: left;
   }
   h2{
@@ -45,4 +46,51 @@
   }
 }
 
-
+@media (max-width: 600px) {
+  body {
+    font-family: "Poppins", sans-serif;
+    margin: 50px 50px 0 50px;
+    background-color: #faf9f6;
+    display: flex;
+    flex-direction: column;
+    min-height: 95vh;
+  }
+  .main {
+    flex: 1;
+  }
+  h1 {
+    font-size: 4rem;
+  }
+  footer {
+    text-align: right;
+    color: midnightblue;
+  }
+  .left-card{
+    float: left;
+    display: block;
+    width: 100%;
+    margin-right: 2rem;
+  }
+  .right-card{
+    float: right;
+    display: block;
+    width: 100%;
+    margin-top: 1rem;
+  }
+  .tile-image{
+    width: 100%;
+    height: 7rem;
+    object-fit: cover;
+    float: left;
+  }
+  h2{
+    font-size: 1rem;
+    position: relative;
+    top: 1rem;
+  }
+  p {
+    font-size: 0.6rem;
+    position: relative;
+    top: 0.3rem;
+  }
+}
